# Enterprise-Knowledge-Platform

./: .gitignore  RAG_README.md  README.md  plan.md  test_doc.txt
docs/: AGENT_UPGRADE_ROADMAP.md  LOCAL_DEPLOYMENT.md  PRODUCT_FEATURES.md  RAG_OPTIMIZATION.md
ekp-ai-service/: .env.example  .gitignore  Dockerfile  README.md  openapi.yaml  pyproject.toml  requirements.txt
ekp-ai-service/docs/: api-overview.md
ekp-ai-service/src/: config.py  database.py  main.py  redis_client.py
ekp-ai-service/src/agents/: __init__.py  react_agent.py
ekp-ai-service/src/agents/tools/: __init__.py  base.py  document_tools.py
ekp-ai-service/src/api/: __init__.py
ekp-ai-service/src/api/v1/: __init__.py  agent.py  documents.py  health.py  qa.py
ekp-ai-service/src/models/: __init__.py  document.py
ekp-ai-service/src/services/: __init__.py  cache_service.py  chunker_service.py  document_processor.py  document_service.py  embedding_service.py  llm_service.py  lock_service.py  memory_service.py  rag_anything_service.py  retriever_service.py  vector_store.py
ekp-ai-service/tests/: test_chunker.py  test_standalone.py
ekp-biz-service/: .gitignore  Dockerfile  README.md  pom.xml
ekp-infra/: .env.example  .gitignore  README.md  WEEK1_SUMMARY.md  WEEK2_SUMMARY.md  architecture.md  daemon.json  docker-compose.yml  down-dev.sh  up-dev.sh
ekp-infra/init-db/: 01-init-extensions.sql
ekp-web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
ekp-web/src/app/: layout.tsx  page.tsx
ekp-web/src/hooks/: useApi.ts
ekp-web/src/lib/: api.ts
(+16 files in other folders)
